--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -38,7 +38,7 @@ jobs:
         run: npm run lint
 
       - name: Test
-        run: npm test onnx/candy.onnx pytorch/alexnet.pt.zip tflite/squeezenet.tflite
+        run: npm test onnx/candy.onnx pytorch/alexnet.ptl tflite/squeezenet.tflite
 
       - name: Build Python Server
         run: npm run build python
