--- a/source/onnx-metadata.json
+++ b/source/onnx-metadata.json
@@ -801,7 +801,7 @@
       {
         "name": "grid",
         "type": "T1",
-        "description": "output tensor of shape (N, C, H, W, 2) of 2D sample coordinates or (N, C, D, H, W, 3) of 3D sample coordinates."
+        "description": "output tensor of shape (N, H, W, 2) of 2D sample coordinates or (N, D, H, W, 3) of 3D sample coordinates."
       }
     ],
     "min_output": 1,
