Add prefer-destructuring lint rule

--- a/package.json
+++ b/package.json
@@ -81,7 +81,8 @@
             "no-unused-private-class-members": "error",
             "no-use-before-define": "error",
             "object-curly-spacing": [ "error", "always" ],
-            "prefer-const": [ "error", { "destructuring": "all" } ],
+            "prefer-const": [ "error" ],
+            "prefer-destructuring": [ "error", { "array": false } ],
             "require-atomic-updates": "error",
             "semi": [ "error", "always" ],
             "space-before-blocks": "error",
